--- a/index.html
+++ b/index.html
@@ -1,20 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HTML Links</title>
-</head>
-<body>
-
-  <!-- Challenge 1: Wrap the text below with a link that has an absolute path -->
-  Absolute Path (external link)
-
-  <!-- Challenge 2: Wrap the text below with a link that has a relative path to about.html-->
-  Relative Path (internal link)
-
-  <!-- Challenge 3: Wrap the img tag below with a link that uses the target attribute -->
-  <img src="https://ironboard-learn.s3.amazonaws.com/Image_61_lion.jpg" alt="Image by Alexas Fotos from Pixabay">
-
-</body>
-</html>
+<!DOCTYPE html> 
+<html lang="en"> 
+<head> 
+<meta charset="UTF-8"> 
+<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+<title>HTML Links</title> 
+</head> 
+<body> 
+<!-- Challenge 1: Wrap the text below with a link that has an absolute path --> 
+Absolute Path (external link) 
+<a href="https://www.facebook.com">Facebook</a> 
+<!-- Challenge 2: Wrap the text below with a link that has a relative path to about.html--> 
+Relative Path (internal link) 
+<a href="about.html">About Page</a> 
+<!-- Challenge 3: Wrap the img tag below with a link that uses the target attribute --> 
+<a href="https://www.facebook.com" target="_blank">Facebook</a> 
+<img src="https://ironboard-learn.s3.amazonaws.com/Image_61_lion.jpg" alt="Image by Alexas Fotos from Pixabay"> 
+</body> 
+</html> 
